phosphorus.css
.forkphorus-root {
  position: relative;
  font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
  width: 480px;
  height: 360px;
  font-size: 10px;
  background-color: #fff;
  color: black;
  overflow: hidden;
  user-select: none;
}

.forkphorus-root > * {
  position: absolute;
  left: 0;
  top: 0;
  transform: translateZ(0);
  width: 100%;
  height: 100%;
}

/* Scratch 2 fonts */
@font-face {
  font-family: "Donegal One";
  src: url("fonts/DonegalOne-Regular.woff") format("woff");
}
@font-face {
  font-family: "Gloria Hallelujah";
  src: url("fonts/GloriaHallelujah.woff") format("woff");
}
@font-face {
  font-family: "Mystery Quest";
  src: url("fonts/MysteryQuest-Regular.woff") format("woff");
}
@font-face {
  font-family: "Permanent Marker";
  src: url("fonts/PermanentMarker-Regular.woff") format("woff");
}
@font-face {
  font-family: "Scratch";
  src: url("fonts/Scratch.ttf") format("truetype");
}

/* Scratch 3 Variable Watchers */
.s3-watcher-container {
  position: absolute;
  top: 0;
  left: 0;
  color: rgb(87, 94, 117);
  border: 0.1em solid rgba(0, 0, 0, 0.15);
  border-radius: 0.25em;
  display: flex;
  flex-direction: column;
  background: hsl(215, 100%, 95%);
  pointer-events: auto;
  line-height: 1.25;
}
.s3-watcher-container > * {
  font-size: 1.2em;
}
.s3-watcher-row {
  display: flex;
  flex-direction: row;
}
.s3-watcher-label {
  font-weight: bold;
  text-align: center;
  margin: 0 5px;
}
.s3-watcher-value {
  color: white;
  text-align: center;
}
.s3-watcher-container .s3-watcher-value {
  /* fallback color */
  background-color: rgb(15, 189, 140);
}
.s3-watcher-container[data-opcode^="data_"] .s3-watcher-value {
  background-color: rgb(255, 140, 26);
}
.s3-watcher-container[data-opcode^="sensing_"] .s3-watcher-value {
  background-color: rgb(92, 177, 214);
}
.s3-watcher-container[data-opcode^="motion_"] .s3-watcher-value {
  background-color: rgb(76, 151, 255);
}
.s3-watcher-container[data-opcode^="looks_"] .s3-watcher-value {
  background-color: rgb(153, 102, 255);
}
.s3-watcher-container[data-opcode^="sound_"] .s3-watcher-value {
  background-color: rgb(207, 99, 207);
}
/* Normal watcher */
.s3-watcher-container-normal {
  padding: 3px;
}
.s3-watcher-row-normal .s3-watcher-value {
  border-radius: 0.25em;
  padding: 0 0.2px;
  margin: 0 0.5em;
  min-width: 4em;
}
/* Slider Watcher (uses normal) */
.s3-watcher-row-slider input[type="range"] {
  margin: 0;
  width: 100%;
}
/* Large watcher */
.s3-watcher-large .s3-watcher-value {
  border-radius: inherit;
  font-size: 1.6em;
  min-height: 1.4em;
  min-width: 3em;
}

/* Scratch 3 list watchers */
.s3-list-container {
  position: absolute;
  color: rgb(87, 94, 117);
  top: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  background-color: hsla(215, 100%, 95%, 1);
  border: 0.1em solid rgba(0, 0, 0, 0.15);
  border-radius: 0.25em;
  pointer-events: none;
  line-height: 1.5;
}
.s3-list-content {
  text-align: center;
  width: 100%;
  flex: 1;
  overflow-y: auto;
  pointer-events: auto;
  /* reset any scrollbar color changes */
  scrollbar-color: auto;
}
.s3-list-content:empty::after {
  content: "(empty)";
  text-align: center;
}
.s3-list-rows {
  position: relative;
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  overflow-y: scroll;
  contain: layout;
}
.s3-list-endpoint {
  position: absolute;
  width: 1px;
  height: 1px;
  will-change: transform;
  contain: layout;
}
.s3-list-row {
  position: absolute;
  display: flex;
  flex-direction: row;
  width: 100%;
  text-align: left;
  align-items: center;
  will-change: transform;
  contain: layout;
}
.s3-list-index, .s3-list-value {
  margin: 0 3px;
}
.s3-list-index {
  font-weight: bold;
  pointer-events: none;
}
.s3-list-value {
  background-color: rgb(252, 102, 44);
  border: 1px solid rgba(0, 0, 0, 0.15);
  border-radius: 0.25em;
  flex: 1;
  color: #fff;
  padding: 1px 5px;
  min-height: 1.5em;
  overflow: hidden;
  text-overflow: ellipsis;
  user-select: text;
}
.s3-list-top-label, .s3-list-bottom-label {
  padding: 3px;
  text-align: center;
  font-weight: bold;
  background-color: #fff;
}
.s3-list-top-label {
  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
}
.s3-list-row, .s3-list-top-label, .s3-list-bottom-label {
  font-size: 1.2em;
}

/* Speech to text */
.speech2text-container {
  display: none;
  transform: translate(40em, 28em);
  width: 5em;
  height: 5em;
}
.speech2text-container[listening] {
  display: block;
}
.speech2text-animation, .speech2text-indicator {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.speech2text-animation, .speech2text-indicator {
  border-radius: 100%;
}
.speech2text-indicator {
  background: #ff5e5e;
}
@keyframes speech2text-animation {
  from {
    transform: scale(1);
    opacity: 1;
  }
  to {
    transform: scale(1.7);
    opacity: 0;
  }
}
.speech2text-animation {
  background: #ff9a9a;
  animation-name: speech2text-animation;
  animation-iteration-count: infinite;
  animation-duration: 1.5s;
  animation-delay: 0.5s;
}

